extension can now extract text from textarea in an onchange event

--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,12 @@
     "default_popup": "popup/popup.html"
   },
 
-  "permissions": ["scripting"]
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+
+  "permissions": ["scripting", "activeTab"]
 }
